--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,11 +7,13 @@ AllCops:
     - recipes/**/*
     - spec/**/*
   Exclude:
-    - vendor
+    - cookbooks/**/*
+    - vendor/**/*
 
 Encoding:
   Exclude:
     - metadata.rb
+    - Gemfile
 
 NumericLiterals:
   Enabled: false
