--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,18 +5,30 @@ driver_config:
 
 platforms:
   - name: ubuntu-10.04
-  - driver_config:
+    driver_config:
       box: opscode-ubuntu-10.04
       box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-10.04_provisionerless.box
   - name: ubuntu-12.04
-  - driver_config:
+    driver_config:
       box: opscode-ubuntu-12.04
       box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
+  - name: centos-6.4
+    driver_config:
+      box: opscode-centos-6.4
+      box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
+  - name: centos-5.9
+    driver_config:
+      box: opscode-centos-5.9
+      box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-5.9_provisionerless.box
 
 suites:
   - name: "default"
-  - run_list:
+    run_list:
       - recipe[gotcms]
-  - name: "redhat"
-  - run_list:
+  - name: "postgresql"
+    run_list:
       - recipe[gotcms]
+    attributes:
+      gotcms:
+        db:
+          driver: 'pdo_pgsql'
