--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,12 +22,37 @@ platforms:
       box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-5.9_provisionerless.box
 
 suites:
-  - name: "default"
+  - name: "debian-default"
     run_list:
       - recipe[gotcms]
-  - name: "postgresql"
+    excludes:
+      - centos-6.4
+      - centos-5.9
+
+  - name: "redhat-default"
     run_list:
       - recipe[gotcms]
+    excludes:
+      - ubuntu-10.04
+      - ubuntu-12.04
+
+  - name: "debian-postgresql"
+    run_list:
+      - recipe[gotcms]
+    excludes:
+      - centos-6.4
+      - centos-5.9
+    attributes:
+      gotcms:
+        db:
+          driver: 'pdo_pgsql'
+
+  - name: "redhat-postgresql"
+    run_list:
+      - recipe[gotcms]
+    excludes:
+      - ubuntu-10.04
+      - ubuntu-12.04
     attributes:
       gotcms:
         db:
