--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,23 +3,24 @@ driver_plugin: vagrant
 driver_config:
   require_chef_omnibus: true
 
+
 platforms:
-  - name: ubuntu-10.04
-    driver_config:
-      box: opscode-ubuntu-10.04
-      box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-10.04_provisionerless.box
   - name: ubuntu-12.04
     driver_config:
       box: opscode-ubuntu-12.04
       box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
-  - name: centos-6.4
+  - name: ubuntu-13.04
     driver_config:
-      box: opscode-centos-6.4
-      box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
+      box: opscode-ubuntu-13.04
+      box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-13.04_provisionerless.box
   - name: centos-5.9
     driver_config:
       box: opscode-centos-5.9
       box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-5.9_provisionerless.box
+  - name: centos-6.4
+    driver_config:
+      box: opscode-centos-6.4
+      box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
 
 suites:
   - name: "debian-default"
@@ -33,7 +34,7 @@ suites:
     run_list:
       - recipe[gotcms]
     excludes:
-      - ubuntu-10.04
+      - ubuntu-13.04
       - ubuntu-12.04
 
   - name: "debian-postgresql"
@@ -46,12 +47,15 @@ suites:
       gotcms:
         db:
           driver: 'pdo_pgsql'
+      postgresql:
+        password:
+          postgres: 'toor'
 
   - name: "redhat-postgresql"
     run_list:
       - recipe[gotcms]
     excludes:
-      - ubuntu-10.04
+      - ubuntu-13.04
       - ubuntu-12.04
     attributes:
       gotcms:
